--- a/index.html
+++ b/index.html
@@ -4,442 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Idriss JAIRI - Machine Learning Researcher</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        html {
-            scroll-behavior: smooth;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            color: #2c3e50;
-            background: #f5f7fa;
-        }
-
-        .layout {
-            display: flex;
-            min-height: 100vh;
-        }
-
-        /* Sidebar Styles */
-        .sidebar {
-            position: fixed;
-            left: 0;
-            top: 0;
-            width: 320px;
-            height: 100vh;
-            background: linear-gradient(180deg, #1e3c72 0%, #2a5298 100%);
-            color: white;
-            padding: 40px 30px;
-            overflow-y: auto;
-            z-index: 1000;
-        }
-
-        .sidebar::-webkit-scrollbar {
-            width: 8px;
-        }
-
-        .sidebar::-webkit-scrollbar-track {
-            background: rgba(255,255,255,0.1);
-        }
-
-        .sidebar::-webkit-scrollbar-thumb {
-            background: rgba(255,255,255,0.3);
-            border-radius: 4px;
-        }
-
-        .profile-pic {
-            width: 180px;
-            height: 180px;
-            border-radius: 50%;
-            margin: 0 auto 25px;
-            display: block;
-            border: 5px solid rgba(255,255,255,0.3);
-            background: rgba(255,255,255,0.1);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 4em;
-            color: rgba(255,255,255,0.5);
-        }
-
-        .sidebar h1 {
-            font-size: 1.8em;
-            margin-bottom: 10px;
-            text-align: center;
-        }
-
-        .sidebar .title {
-            font-size: 1em;
-            opacity: 0.9;
-            text-align: center;
-            margin-bottom: 20px;
-            line-height: 1.5;
-        }
-
-        .sidebar .contact-item {
-            display: flex;
-            align-items: center;
-            margin-bottom: 15px;
-            font-size: 0.9em;
-        }
-
-        .sidebar .contact-item a {
-            color: white;
-            text-decoration: none;
-            transition: opacity 0.3s;
-        }
-
-        .sidebar .contact-item a:hover {
-            opacity: 0.7;
-        }
-
-        .sidebar hr {
-            border: none;
-            border-top: 1px solid rgba(255,255,255,0.3);
-            margin: 25px 0;
-        }
-
-        .sidebar-nav {
-            margin-bottom: 30px;
-        }
-
-        .sidebar-nav h3 {
-            font-size: 1em;
-            margin-bottom: 15px;
-            opacity: 0.8;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-        }
-
-        .sidebar-nav ul {
-            list-style: none;
-        }
-
-        .sidebar-nav ul li {
-            margin-bottom: 10px;
-        }
-
-        .sidebar-nav ul li a {
-            color: white;
-            text-decoration: none;
-            transition: all 0.3s;
-            display: block;
-            padding: 8px 12px;
-            border-radius: 5px;
-        }
-
-        .sidebar-nav ul li a:hover {
-            background: rgba(255,255,255,0.1);
-            padding-left: 20px;
-        }
-
-        .social-links-sidebar {
-            display: flex;
-            flex-direction: column;
-            gap: 12px;
-        }
-
-        .social-links-sidebar a {
-            color: white;
-            text-decoration: none;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            padding: 10px 15px;
-            border: 1px solid rgba(255,255,255,0.3);
-            border-radius: 5px;
-            transition: all 0.3s;
-            font-size: 0.95em;
-        }
-
-        .social-links-sidebar a:hover {
-            background: rgba(255,255,255,0.1);
-            border-color: rgba(255,255,255,0.5);
-        }
-
-        /* Main Content */
-        .main-content {
-            margin-left: 320px;
-            flex: 1;
-            padding: 40px;
-        }
-
-        .container {
-            max-width: 900px;
-            margin: 0 auto;
-        }
-
-        section {
-            padding: 40px 0;
-        }
-
-        h2 {
-            font-size: 2em;
-            margin-bottom: 30px;
-            color: #1e3c72;
-            position: relative;
-            padding-bottom: 15px;
-        }
-
-        h2::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 60px;
-            height: 3px;
-            background: #2a5298;
-        }
-
-        .about-content {
-            font-size: 1.05em;
-            line-height: 1.8;
-            color: #555;
-        }
-
-        .about-content p {
-            margin-bottom: 15px;
-        }
-
-        .experience-grid, .education-grid {
-            display: grid;
-            gap: 25px;
-        }
-
-        .experience-card, .education-card {
-            background: white;
-            padding: 25px;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-            border-left: 4px solid #2a5298;
-        }
-
-        .experience-card h3, .education-card h3 {
-            color: #1e3c72;
-            font-size: 1.3em;
-            margin-bottom: 8px;
-        }
-
-        .experience-card .position, .education-card .degree {
-            color: #2a5298;
-            font-size: 1.05em;
-            font-weight: 600;
-            margin-bottom: 5px;
-        }
-
-        .experience-card .date, .education-card .date {
-            color: #7f8c8d;
-            font-size: 0.9em;
-            margin-bottom: 15px;
-        }
-
-        .experience-card ul {
-            margin-left: 20px;
-            color: #666;
-        }
-
-        .experience-card ul li {
-            margin-bottom: 8px;
-        }
-
-        .education-card .details {
-            color: #666;
-            margin-top: 10px;
-            line-height: 1.7;
-        }
-
-        .skills-container {
-            display: grid;
-            gap: 25px;
-        }
-
-        .skill-category h3 {
-            color: #1e3c72;
-            font-size: 1.1em;
-            margin-bottom: 12px;
-        }
-
-        .skill-tags {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-
-        .skill-tag {
-            background: #e8f0fe;
-            color: #1e3c72;
-            padding: 6px 18px;
-            border-radius: 20px;
-            font-size: 0.9em;
-            font-weight: 500;
-        }
-
-        .publication-item, .conference-item, .award-item {
-            background: white;
-            padding: 20px;
-            margin-bottom: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-        }
-
-        .publication-item .authors {
-            color: #555;
-            margin-bottom: 8px;
-            font-size: 0.95em;
-        }
-
-        .publication-item .title {
-            color: #1e3c72;
-            font-weight: 600;
-            font-size: 1.05em;
-            margin-bottom: 8px;
-        }
-
-        .publication-item .journal {
-            color: #7f8c8d;
-            font-style: italic;
-            margin-bottom: 10px;
-            font-size: 0.9em;
-        }
-
-        .publication-item a, .conference-item a {
-            color: #2a5298;
-            text-decoration: none;
-            font-size: 0.85em;
-            word-break: break-all;
-        }
-
-        .publication-item a:hover, .conference-item a:hover {
-            text-decoration: underline;
-        }
-
-        .conference-item .title {
-            color: #1e3c72;
-            font-weight: 600;
-            font-size: 1em;
-            margin-bottom: 8px;
-        }
-
-        .conference-item .event {
-            color: #7f8c8d;
-            font-style: italic;
-            margin-bottom: 10px;
-            font-size: 0.9em;
-        }
-
-        .award-item {
-            color: #555;
-            line-height: 1.7;
-        }
-
-        .reviewing-content {
-            background: white;
-            padding: 25px;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-        }
-
-        .reviewing-content h3 {
-            color: #1e3c72;
-            margin-bottom: 15px;
-            font-size: 1.1em;
-        }
-
-        .reviewing-content p {
-            color: #555;
-            line-height: 1.8;
-            margin-bottom: 12px;
-        }
-
-        .reviewing-content ul {
-            margin-left: 20px;
-            color: #666;
-        }
-
-        .reviewing-content ul li {
-            margin-bottom: 8px;
-        }
-
-        .subsection-title {
-            color: #1e3c72;
-            margin: 30px 0 20px 0;
-            font-size: 1.2em;
-        }
-
-        footer {
-            background: #1a252f;
-            color: #aaa;
-            text-align: center;
-            padding: 20px;
-            font-size: 0.9em;
-            margin-left: -40px;
-            margin-right: -40px;
-            margin-bottom: -40px;
-        }
-
-        /* Mobile Toggle */
-        .mobile-toggle {
-            display: none;
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 1001;
-            background: #1e3c72;
-            color: white;
-            border: none;
-            padding: 12px 16px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1.2em;
-        }
-
-        /* Responsive */
-        @media (max-width: 1024px) {
-            .sidebar {
-                transform: translateX(-100%);
-                transition: transform 0.3s;
-            }
-
-            .sidebar.active {
-                transform: translateX(0);
-            }
-
-            .main-content {
-                margin-left: 0;
-                padding: 80px 20px 40px;
-            }
-
-            .mobile-toggle {
-                display: block;
-            }
-
-            footer {
-                margin-left: -20px;
-                margin-right: -20px;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .sidebar {
-                width: 280px;
-            }
-
-            h2 {
-                font-size: 1.6em;
-            }
-
-            .main-content {
-                padding: 80px 15px 30px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <button class="mobile-toggle" onclick="toggleSidebar()">☰ Menu</button>
@@ -447,7 +12,7 @@
     <div class="layout">
         <!-- Sidebar -->
         <aside class="sidebar" id="sidebar">
-            <div class="profile-pic">👤</div>
+            <img src="images/profile-picture-IJ.jpg" alt="Idriss JAIRI" class="profile-pic">
             
             <h1>Idriss JAIRI</h1>
             <p class="title">Machine Learning Researcher<br>Ph.D. in AI & Environmental Science</p>
@@ -825,20 +390,6 @@
         </main>
     </div>
 
-    <script>
-        function toggleSidebar() {
-            const sidebar = document.getElementById('sidebar');
-            sidebar.classList.toggle('active');
-        }
-
-        // Close sidebar when clicking on a link on mobile
-        if (window.innerWidth <= 1024) {
-            document.querySelectorAll('.sidebar-nav a, .social-links-sidebar a').forEach(link => {
-                link.addEventListener('click', () => {
-                    document.getElementById('sidebar').classList.remove('active');
-                });
-            });
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
