--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="layout">
         <!-- Sidebar -->
         <aside class="sidebar" id="sidebar">
-            <img src="images/profile-picture-IJ.jpg" alt="Idriss JAIRI" class="profile-pic">
+            <img src="profile.jpg" alt="Idriss JAIRI" class="profile-pic">
             
             <h1>Idriss JAIRI</h1>
             <p class="title">Machine Learning Researcher<br>Ph.D. in AI & Environmental Science</p>
@@ -53,6 +53,12 @@
                 <a href="https://www.linkedin.com/in/jairiidriss/" target="_blank">
                     <span>🔗</span> LinkedIn
                 </a>
+                <a href="https://scholar.google.com/citations?user=YOUR_ID" target="_blank">
+                    <span>🎓</span> Google Scholar
+                </a>
+                <a href="https://www.researchgate.net/profile/YOUR_PROFILE" target="_blank">
+                    <span>🔬</span> ResearchGate
+                </a>
                 <a href="https://medium.com/@jairiidriss" target="_blank">
                     <span>🔗</span> Medium
                 </a>
@@ -85,7 +91,7 @@
                     <h2>Research & Professional Experience</h2>
                     <div class="experience-grid">
                         <div class="experience-card">
-                            <h3>LIRMM, Montpellier</h3>
+                            <h3><a href="https://www.lirmm.fr/" target="_blank" class="institution-link">LIRMM</a>, Montpellier</h3>
                             <div class="position">Postdoctoral Researcher</div>
                             <div class="date">October 2025 - Present | Montpellier, France</div>
                             <ul>
@@ -97,7 +103,7 @@
                         </div>
 
                         <div class="experience-card">
-                            <h3>University of Lille</h3>
+                            <h3><a href="https://www.univ-lille.fr/" target="_blank" class="institution-link">University of Lille</a> / <a href="https://www.cristal.univ-lille.fr/" target="_blank" class="institution-link">CRIStAL</a></h3>
                             <div class="position">Doctoral Researcher</div>
                             <div class="date">October 2022 - September 2025 | Lille, France</div>
                             <ul>
@@ -109,7 +115,7 @@
                         </div>
 
                         <div class="experience-card">
-                            <h3>Southwest Petroleum University</h3>
+                            <h3><a href="https://www.swpu.edu.cn/en/" target="_blank" class="institution-link">Southwest Petroleum University</a></h3>
                             <div class="position">Graduate Research Assistant</div>
                             <div class="date">September 2020 - June 2022 | Chengdu, China</div>
                             <ul>
@@ -126,7 +132,7 @@
                     <h2>Education</h2>
                     <div class="education-grid">
                         <div class="education-card">
-                            <h3>University of Lille, France</h3>
+                            <h3><a href="https://www.univ-lille.fr/" target="_blank" class="institution-link">University of Lille</a>, France</h3>
                             <div class="degree">Ph.D. in Machine Learning</div>
                             <div class="date">October 2022 - September 2025</div>
                             <div class="details">
@@ -135,7 +141,7 @@
                         </div>
 
                         <div class="education-card">
-                            <h3>Southwest Petroleum University, China</h3>
+                            <h3><a href="https://www.swpu.edu.cn/en/" target="_blank" class="institution-link">Southwest Petroleum University</a>, China</h3>
                             <div class="degree">Master of Science in Computer Science & Technology</div>
                             <div class="date">October 2019 - June 2022</div>
                             <div class="details">
@@ -168,7 +174,7 @@
                     <h2>Teaching & Supervision Experience</h2>
                     <div class="experience-grid">
                         <div class="experience-card">
-                            <h3>École Centrale de Lille</h3>
+                            <h3><a href="https://centralelille.fr/" target="_blank" class="institution-link">École Centrale de Lille</a></h3>
                             <div class="position">Instructor - 3rd Year Engineering Program (G3 - OSP Track)</div>
                             <div class="date">2024-2025</div>
                             <ul>
@@ -177,7 +183,7 @@
                         </div>
 
                         <div class="experience-card">
-                            <h3>École Centrale de Lille</h3>
+                            <h3><a href="https://centralelille.fr/" target="_blank" class="institution-link">École Centrale de Lille</a></h3>
                             <div class="position">Instructor - Master in Management of AI in Health (MIAS M1)</div>
                             <div class="date">2024-2025</div>
                             <ul>
@@ -186,7 +192,7 @@
                         </div>
 
                         <div class="experience-card">
-                            <h3>École Centrale de Lille</h3>
+                            <h3><a href="https://centralelille.fr/" target="_blank" class="institution-link">École Centrale de Lille</a></h3>
                             <div class="position">Instructor - Master in Management of AI in Health (MIAS M1)</div>
                             <div class="date">2023-2024</div>
                             <ul>
@@ -196,7 +202,7 @@
                         </div>
 
                         <div class="experience-card">
-                            <h3>École Centrale de Lille</h3>
+                            <h3><a href="https://centralelille.fr/" target="_blank" class="institution-link">École Centrale de Lille</a></h3>
                             <div class="position">Instructor - Master in Management of AI in Health (MIAS M2)</div>
                             <div class="date">2023-2024</div>
                             <ul>
@@ -205,7 +211,7 @@
                         </div>
 
                         <div class="experience-card">
-                            <h3>École Centrale de Lille</h3>
+                            <h3><a href="https://centralelille.fr/" target="_blank" class="institution-link">École Centrale de Lille</a></h3>
                             <div class="position">Instructor - International Biomedical Engineering Program (BME M2)</div>
                             <div class="date">2023-2024</div>
                             <ul>
