--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <h2>About Me</h2>
                     <div class="about-content">
                         <p>
-                            I am a postdoctoral researcher at LIRMM (Montpellier Laboratory of Informatics, Robotics, and Microelectronics), 
+                            I am a postdoctoral researcher at <a href="https://www.lirmm.fr/" target="_blank" class="inline-link">LIRMM (Montpellier Laboratory of Informatics, Robotics, and Microelectronics)</a>, 
                             specializing in deep learning applications for environmental monitoring. My research focuses on developing multimodal 
                             AI approaches that combine vision, audio, and sensor fusion to address real-world challenges in biodiversity and sustainability.
                         </p>
@@ -136,7 +136,8 @@
                             <div class="degree">Ph.D. in Machine Learning</div>
                             <div class="date">October 2022 - September 2025</div>
                             <div class="details">
-                                <strong>Thesis:</strong> Design and Development of Intelligent Air Quality Indicators for Environmental and Health Preservation Support
+                                <strong>Thesis:</strong> Design and Development of Intelligent Air Quality Indicators for Environmental and Health Preservation Support<br>
+                                <strong>Supervisor:</strong> <a href="https://www.researchgate.net/profile/Hayfa-Zgaya" target="_blank" class="inline-link">Prof. Hayfa Zgaya-Biau</a>
                             </div>
                         </div>
 
@@ -146,7 +147,8 @@
                             <div class="date">October 2019 - June 2022</div>
                             <div class="details">
                                 <strong>Thesis:</strong> Neural Transfer Learning for Soil Liquefaction Tests<br>
-                                <strong>Overall GPA:</strong> 4.27/5
+                                <strong>Overall GPA:</strong> 4.27/5<br>
+                                <strong>Supervisor:</strong> <a href="https://scholar.google.com/citations?user=bbfOZSAAAAAJ" target="_blank" class="inline-link">Prof. Yu Fang</a>
                             </div>
                         </div>
 
@@ -175,7 +177,7 @@
                     <div class="experience-grid">
                         <div class="experience-card">
                             <h3><a href="https://centralelille.fr/" target="_blank" class="institution-link">École Centrale de Lille</a></h3>
-                            <div class="position">Instructor - 3rd Year Engineering Program (G3 - OSP Track)</div>
+                            <div class="position">Instructor - <a href="https://ecole.centralelille.fr/ingenieur-centralien/la-troisieme-annee/les-parcours/" target="_blank" class="inline-link">3rd Year Engineering Program (G3 - OSP Track)</a></div>
                             <div class="date">2024-2025</div>
                             <ul>
                                 <li>Taught Data Science and Machine Learning courses</li>
@@ -184,7 +186,7 @@
 
                         <div class="experience-card">
                             <h3><a href="https://centralelille.fr/" target="_blank" class="institution-link">École Centrale de Lille</a></h3>
-                            <div class="position">Instructor - Master in Management of AI in Health (MIAS M1)</div>
+                            <div class="position">Instructor - <a href="https://ilis.univ-lille.fr/toutes-nos-formations/master-ingenierie-de-la-sante/m1-m2-parcours-mias-management-de-lintelligence-artificielle-en-sante" target="_blank" class="inline-link">Master in Management of AI in Health</a> (<a href="https://centralelille.fr/en/fiche-master-mias/" target="_blank" class="inline-link">MIAS M1</a>)</div>
                             <div class="date">2024-2025</div>
                             <ul>
                                 <li>Taught Data Science and Machine Learning courses</li>
@@ -193,7 +195,7 @@
 
                         <div class="experience-card">
                             <h3><a href="https://centralelille.fr/" target="_blank" class="institution-link">École Centrale de Lille</a></h3>
-                            <div class="position">Instructor - Master in Management of AI in Health (MIAS M1)</div>
+                            <div class="position">Instructor - <a href="https://ilis.univ-lille.fr/toutes-nos-formations/master-ingenierie-de-la-sante/m1-m2-parcours-mias-management-de-lintelligence-artificielle-en-sante" target="_blank" class="inline-link">Master in Management of AI in Health</a> (<a href="https://centralelille.fr/en/fiche-master-mias/" target="_blank" class="inline-link">MIAS M1</a>)</div>
                             <div class="date">2023-2024</div>
                             <ul>
                                 <li>Taught Data Science (Part 2)</li>
@@ -203,7 +205,7 @@
 
                         <div class="experience-card">
                             <h3><a href="https://centralelille.fr/" target="_blank" class="institution-link">École Centrale de Lille</a></h3>
-                            <div class="position">Instructor - Master in Management of AI in Health (MIAS M2)</div>
+                            <div class="position">Instructor - <a href="https://ilis.univ-lille.fr/toutes-nos-formations/master-ingenierie-de-la-sante/m1-m2-parcours-mias-management-de-lintelligence-artificielle-en-sante" target="_blank" class="inline-link">Master in Management of AI in Health</a> (<a href="https://centralelille.fr/en/fiche-master-mias/" target="_blank" class="inline-link">MIAS M2</a>)</div>
                             <div class="date">2023-2024</div>
                             <ul>
                                 <li>Taught Machine Learning course</li>
@@ -212,7 +214,7 @@
 
                         <div class="experience-card">
                             <h3><a href="https://centralelille.fr/" target="_blank" class="institution-link">École Centrale de Lille</a></h3>
-                            <div class="position">Instructor - International Biomedical Engineering Program (BME M2)</div>
+                            <div class="position">Instructor - <a href="https://centralelille.fr/en/master-biomedical-engineering/" target="_blank" class="inline-link">International Biomedical Engineering Program (BME M2)</a></div>
                             <div class="date">2023-2024</div>
                             <ul>
                                 <li>Taught Machine Learning course</li>
