--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         </div>
 
                         <div class="education-card">
-                            <h3>University of Ibn Zohr, Morocco</h3>
+                            <h3><a href="https://www.uiz.ac.ma/faculte-des-sciences-agadir" target="_blank" class="institution-link">University of Ibn Zohr</a>, Morocco</h3>
                             <div class="degree">Bachelor of Science in Computer Science & Engineering</div>
                             <div class="date">September 2018 - June 2019</div>
                             <div class="details">
@@ -162,7 +162,7 @@
                         </div>
 
                         <div class="education-card">
-                            <h3>University of Ibn Zohr - Higher School of Technology, Morocco</h3>
+                            <h3><a href="https://www.esta.ac.ma/" target="_blank" class="institution-link">University of Ibn Zohr - Higher School of Technology</a>, Morocco</h3>
                             <div class="degree">DUT (University Technology Diploma) in Computer Science & Engineering</div>
                             <div class="date">September 2016 - June 2018</div>
                             <div class="details">
