--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
     <div class="layout">
         <!-- Sidebar -->
         <aside class="sidebar" id="sidebar">
-            <img src="profile.jpg" alt="Idriss JAIRI" class="profile-pic">
+            <img src="images/profile-picture-IJ.jpg" alt="Idriss JAIRI" class="profile-pic">
             
             <h1>Idriss JAIRI</h1>
             <p class="title">Machine Learning Researcher<br>Ph.D. in AI & Environmental Science</p>
             
             <div class="contact-item">
                 📍 Montpellier, France
-            </div>
-            <div class="contact-item">
-                📱 <a href="tel:+33778532528">+33 77 853 25 28</a>
             </div>
             <div class="contact-item">
                 ✉️ <a href="mailto:idriss.jairi@umontpellier.fr">idriss.jairi@umontpellier.fr</a>
@@ -147,13 +144,12 @@
                             <div class="date">October 2019 - June 2022</div>
                             <div class="details">
                                 <strong>Thesis:</strong> Neural Transfer Learning for Soil Liquefaction Tests<br>
-                                <strong>Overall GPA:</strong> 4.27/5<br>
                                 <strong>Supervisor:</strong> <a href="https://scholar.google.com/citations?user=bbfOZSAAAAAJ" target="_blank" class="inline-link">Prof. Yu Fang</a>
                             </div>
                         </div>
 
                         <div class="education-card">
-                            <h3><a href="https://www.uiz.ac.ma/faculte-des-sciences-agadir" target="_blank" class="institution-link">University of Ibn Zohr</a>, Morocco</h3>
+                            <h3><a href="https://www.uiz.ac.ma/faculte-des-sciences-agadir" target="_blank" class="institution-link">University of Ibn Zohr - Faculty of Sciences</a>, Morocco</h3>
                             <div class="degree">Bachelor of Science in Computer Science & Engineering</div>
                             <div class="date">September 2018 - June 2019</div>
                             <div class="details">
