--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 <li>Conducted research on machine learning models for intelligent air quality indicators</li>
                                 <li>Focused on explainable AI, transfer learning, and toxicity threshold prediction</li>
                                 <li>Published multiple journal papers in top-ranked international journals</li>
-                                <li>Presented research in international conferences and contributed to the ANR IARISQ project</li>
+                                <li>Presented research in international conferences and contributed to the ANR <strong><a href="https://anr.fr/fileadmin/aap/2025/selection/aapg-2025-selection-vague2.pdf", target="_blank">IARISQ</a></strong> project</li>
                             </ul>
                         </div>
 
@@ -371,7 +371,7 @@
                         </ul>
 
                         <h3 style="margin-top: 25px;">Research Project Participation</h3>
-                        <p>Participated in the setup of the ANR (Agence Nationale de la Recherche) research project <strong>IARISQ</strong> ("Conception et développement d'un système d'aide à la décision à base d'Intelligence Artificielle pour la prédiction de la qualité de l'air et la détermination des risques sanitaires des particules"), primarily based on my Ph.D. work, in collaboration with <strong>CRIStAL</strong>, <strong>LGCgE</strong>, and <strong>ATMO</strong>.</p>
+                        <p>Participated in the setup of the ANR (Agence Nationale de la Recherche) research project <strong><a href="https://anr.fr/fileadmin/aap/2025/selection/aapg-2025-selection-vague2.pdf", target="_blank">IARISQ</a></strong> ("Conception et développement d'un système d'aide à la décision à base d'Intelligence Artificielle pour la prédiction de la qualité de l'air et la détermination des risques sanitaires des particules"), primarily based on my Ph.D. work, in collaboration with <strong>CRIStAL</strong>, <strong>LGCgE</strong>, and <strong>ATMO</strong>.</p>
                     </div>
                 </section>
 
